--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@
 #quarkus.http.cors=true
 quarkus.swagger-ui.always-include=true
 
+%dev.kafka.bootstrap.servers=localhost:9092
+%prod.kafka.bootstrap.servers=tv-cluster-kafka-bootstrap:9092
+
 mp.messaging.outgoing.tv-out.connector=smallrye-kafka
 mp.messaging.outgoing.tv-out.client.id=tripvibe-producer
 mp.messaging.outgoing.tv-out.topic=tripvibe
@@ -37,9 +40,9 @@ mp.messaging.incoming.tv-in.value.deserializer=org.apache.kafka.common.serializa
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username = hibernate
 quarkus.datasource.password = hibernate
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:6875/materialize
+%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:6875/materialize
 quarkus.hibernate-orm.database.generation=none
-
+%prod.quarkus.datasource.jdbc.url = jdbc:postgresql://${MATERIALIZE_SERVICE_HOST}:${MATERIALIZE_SERVICE_PORT_PSQL}/materialize
 
 
 # reactive pg client does not work with materialize '-o-'
