🦓 add evict single and mock data 🦓

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ mp.messaging.incoming.tv-in.key.deserializer=org.apache.kafka.common.serializati
 mp.messaging.incoming.tv-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 %dev.org.acme.rest.SCSubmitService/mp-rest/url=http://localhost:8080/api
-%prod.org.acme.rest.SCSubmitService/mp-rest/url=http://sc-submit:8080/api
+%prod.org.acme.rest.SCSubmitService/mp-rest/url=http://sc-routes:8080/api
 org.acme.rest.SCSubmitService/mp-rest/scope=javax.inject.Singleton
 
 # postgres client
