🦐 disable fake submission by env var 🦐

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Configuration file
 # key = value
 
+org.acme.submission.submitFake=${USE_FAKE:false}
+
 # logging configuration
 #quarkus.log.level=DEBUG
 
