🦇 producer client.id unique 🦇

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ mp.messaging.outgoing.tv-out.key.serializer=org.apache.kafka.common.serializatio
 mp.messaging.outgoing.tv-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 mp.messaging.outgoing.tv-emit-out.connector=smallrye-kafka
-mp.messaging.outgoing.tv-emit-out.client.id=tripvibe-producer
+mp.messaging.outgoing.tv-emit-out.client.id=tripvibe-emitter
 mp.messaging.outgoing.tv-emit-out.topic=tripvibe
 #mp.messaging.outgoing.tv-out.key.serializer=org.apache.kafka.common.serialization.LongSerializer
 #mp.messaging.outgoing.tv-out.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
