🦇 emit key,val to kafka topic. using jsonb 🦇

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 # Configuration file
 # key = value
 
-org.acme.submission.submitFake=${USE_FAKE:false}
-
 # logging configuration
 #quarkus.log.level=DEBUG
 
@@ -11,14 +9,6 @@ quarkus.swagger-ui.always-include=true
 
 %dev.kafka.bootstrap.servers=localhost:9092
 %prod.kafka.bootstrap.servers=tv-cluster-kafka-bootstrap:9092
-
-mp.messaging.outgoing.tv-out.connector=smallrye-kafka
-mp.messaging.outgoing.tv-out.client.id=tripvibe-producer
-mp.messaging.outgoing.tv-out.topic=tripvibe
-#mp.messaging.outgoing.tv-out.key.serializer=org.apache.kafka.common.serialization.LongSerializer
-#mp.messaging.outgoing.tv-out.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
-mp.messaging.outgoing.tv-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.tv-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 mp.messaging.outgoing.tv-emit-out.connector=smallrye-kafka
 mp.messaging.outgoing.tv-emit-out.client.id=tripvibe-emitter
@@ -36,7 +26,7 @@ mp.messaging.incoming.tv-in.topic=tripvibe
 #mp.messaging.incoming.tv-in.key.deserializer=org.apache.kafka.common.serialization.LongDeserializer
 #mp.messaging.incoming.tv-in.value.deserializer=io.apicurio.registry.utils.serde.AvroKafkaDeserializer
 mp.messaging.incoming.tv-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.tv-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.tv-in.value.deserializer=io.vertx.kafka.client.serialization.JsonObjectDeserializer
 
 %dev.org.acme.rest.SCSubmitService/mp-rest/url=http://localhost:8080/api
 %prod.org.acme.rest.SCSubmitService/mp-rest/url=http://sc-routes:8080/api
