🐃 update for latest materialize 0.4.0 🐃

--- a/ocp/openshift-deployment.yml
+++ b/ocp/openshift-deployment.yml
@@ -12,9 +12,9 @@ data:
         SELECT (text::JSONB)->'id' as id,
                CAST((text::JSONB)->'location_lng' as float) as location_lng,
                CAST((text::JSONB)->'location_lat' as float) as location_lat,
-               CAST((text::JSONB)->'timestamp_created' AS timestamptz) as timestamp_created,
-               CAST((text::JSONB)->'sentiment'->'departure_time' AS timestamptz) as departure_time,
-               CAST((text::JSONB)->'sentiment'->'estimated_departure_time' AS timestamptz) as estimated_departure_time,
+               CAST(CAST((text::JSONB)->>'timestamp_created' as text) as timestamptz) as timestamp_created,
+               CAST(CAST((text::JSONB)->'sentiment'->>'departure_time' as text) as timestamptz) as departure_time,
+               CAST(CAST((text::JSONB)->'sentiment'->>'estimated_departure_time' as text) as timestamptz) as estimated_departure_time,
                CAST((text::JSONB)->'sentiment'->'vibe' as integer) as vibe,
                CAST((text::JSONB)->'sentiment'->'capacity' as integer) as capacity,
                (text::JSONB)->'sentiment'->'direction' as direction,
@@ -23,7 +23,7 @@ data:
                (text::JSONB)->'sentiment'->'route_number' as route_number,
                (text::JSONB)->'sentiment'->'route_id' as route_id,
                (text::JSONB)->'sentiment'->'stop_name' as stop_name,
-               CAST((text::JSONB)->'at_platform' AS timestamptz) as at_platform,
+               CAST(CAST((text::JSONB)->>'at_platform' as text) as timestamptz) as at_platform,
                (text::JSONB)->'sentiment'->'platform_number' as platform_number,
                (text::JSONB)->'sentiment'->'run_id' as run_id,
                (text::JSONB)->'sentiment'->'stop_id' as stop_id,
