🐃 add new keyed topic 🐃

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ mp.messaging.outgoing.tv-emit-out.topic=tripvibe
 mp.messaging.outgoing.tv-emit-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.tv-emit-out.value.serializer=io.quarkus.kafka.client.serialization.JsonbSerializer
 
+mp.messaging.outgoing.tv-emit-out-2.connector=smallrye-kafka
+mp.messaging.outgoing.tv-emit-out-2.client.id=tripvibe-emitter-2
+mp.messaging.outgoing.tv-emit-out-2.topic=tripvibe2
+mp.messaging.outgoing.tv-emit-out-2.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.tv-emit-out-2.value.serializer=io.quarkus.kafka.client.serialization.JsonbSerializer
+
 mp.messaging.incoming.tv-in.connector=smallrye-kafka
 mp.messaging.incoming.tv-in.group.id=tripvibe-consumer
 mp.messaging.incoming.tv-in.client.id=tripvibe-consumer
